<?xml version="1.0"?>
<package format="2">
  <name>voxblox_collision_checker_rtc</name>
  <version>0.0.0</version>
  <description>The voxblox_collision_checker_rtc package</description>

  <maintainer email="t-hiraoka@jsk.imi.i.u-tokyo.ac.jp">Takuma-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rtmbuild</depend>
  <depend>choreonoid</depend>
  <depend>voxblox_msgs_rtmros_bridge</depend>

  <depend>collision_checker_msgs</depend>
</package>
